--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,7 @@
-name: Docker Image CI
+name: Docker Image CD
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
     branches: [ "main" ]
 
 jobs:
@@ -13,6 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: check out the codebase
+      uses: actions/checkout@v3
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+        aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_ID}}
+        aws-region: us-east-1
+
+    - name: Login to ECR
+      run: aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/q1x5a3x3    
+    
+    - name: Build, tag, and push the Docker image
+      run: |
+        docker build . -t nbomasi/docker-php-docker
+        docker tag nbomasi/continuous_php_image:latest public.ecr.aws/q1x5a3x3/nbomasi/docker-php-docker:latest
+        docker push public.ecr.aws/q1x5a3x3/nbomasi/docker-php-docker:latest
