correcting error on yaml file

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,6 @@ jobs:
     
     - name: Build, tag, and push the Docker image
       run: |
-        docker build . -t nbomasi/docker-php-docker
+        docker build . -t docker-php-docker
         docker tag nbomasi/docker-php-docker:latest public.ecr.aws/q1x5a3x3/nbomasi/docker-php-docker:latest
         docker push public.ecr.aws/q1x5a3x3/nbomasi/docker-php-docker:latest
